 * User interface:
   * Fixed a broken translation which gave all females the prefix female^ on
     alignment description when using the "C" locale or any translation that
     is missing that string.
   * Make the load and recruit hotkey use the ctrl instead of cmd key on non
     Mac systems
   * Added initial drag&drop support for button widgets
 * WML engine:
   * It is now possible to use [time_area] to add or remove new local ToD
     areas and their schedules during scenario events. Removal requires to
     associate an id. to [time_area]s, or it won't work.
   * Added some convenience macros for units: {TRANSFORM_UNIT}, etc.
 * Miscellaneous and bug fixes:
   * Add-on uploads by default will skip all dot-files (.*), which are hidden
     files in UNIX filesystems.
   * Add-on uploads will always preprend the default ignore patterns to the
     contents of user-provided .ign files.
   * Downloaded add-ons' meta information is stored in <add-on dir>/_info.cfg
     rather than <add-on dir>/info.cfg now; both the in-game client and the
     wesnoth_addon_manager Python script have been updated for this.
   * Fixed FULL_HEAL WML macro not working properly.
   * Fixed segmentation fault when wml modified and killed attacker and
     defender in a battle
   * Add some gcc-4.3.0 compilation fixes (patch #1083)
   * Fixed bug #12094: Event "last breath" cannot be triggered for attackers
   * Fixed Wesnoth crashing after an attacker/defender_hits/misses event if
   the WML kills one unit and replaces/unstores the other

Version 1.5.2:
 * campaigns:
   * Son of the Black Eye
     * new set of portrait art
     * in 'Black Flag', there's now several galleons transporting enemies to the
       beach, and no watch towers
     * in 'Saving Inarix', you can now more precisely control when you destroy
       the bridge
     * many assorted small tweaks to most scenarios
     * when leading the Great Horde, all units now require 1 less upkeep
   * Tutorial